Fixing smart contract decompile view and margins
- When `contract_address` is present and contract is not found, there is no way
to display the contract metadata, so it should default back to bytecode.
Decompile option has been commented out since the removal of EVM.
Fixed default behavior on this to bytecode, not decompiled

- Fixed misaligned margins on block list view

--- a/ui/src/app/blocks/block-list/block-list.component.scss
+++ b/ui/src/app/blocks/block-list/block-list.component.scss
@@ -118,6 +118,13 @@ concord-block-graph {
   }
 }
 
+:host ::ng-deep clr-dg-cell.block-hash {
+  margin-top: 0.2rem;
+}
+:host ::ng-deep clr-dg-cell.time-info {
+  margin-top: 0.2rem;
+}
+
 :host ::ng-deep .search-input-area .clr-form-control { 
   margin-top: 0.3rem;
 }
